tests/toy/neg/001191_mutation.toylang
program a = { program a = { } . a = a; } .
